wp-content/themes/delivering-happiness/assets/sass/global/_layout.scss
//
// Layout
// --------------------------------------------------

body{
	@extend %museo_slab;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
	font-size: $font-size-base;
	color: $text-color;
    //&.ugly-os{
      //  -webkit-text-stroke: 0.3px;
    // }
}

.wrapper{
    width: $site-width;
    @extend %block-center;
}

*{
	@include box-sizing(border-box);
}

#content{
	padding-top:81px;
}

